index: 배경이미지 추가.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
     <main id="fullpage">
-        <section class="section">
+        <section id="sec1" class="section">
             <h2>section1</h2>
         </section>
         <section class="section">
