--- a/index.html
+++ b/index.html
@@ -1,56 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="jquery.fullPage.css">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
-    <script src="jquery.fullPage.js"></script>
-    <script src="main.js"></script>
-</head>
-
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li data-menuanchor="section1"><a href="#section1">section1</a></li>
-                <li data-menuanchor="section2"><a href="#section2">section2</a></li>
-                <li data-menuanchor="section3"><a href="#section3">section3</a></li>
-                <li data-menuanchor="section4"><a href="#section4">section4</a></li>
-                <li data-menuanchor="section5"><a href="#section5">section5</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main id="fullpage">
-        <section id="sec1" class="section">
-            <h2>section1</h2>
-        </section>
-        <section class="section">
-            <div class="slide">
-                <h3>slide 1</h3>
-            </div>
-            <div class="slide">
-                <h3>slide 2</h3>
-            </div>
-            <div class="slide">
-                <h3>slide 3</h3>
-            </div>
-        </section>
-        <section class="section">
-            <h2>section3</h2>
-        </section>
-        <section class="section">
-            <h2>section4</h2>
-        </section>
-        <section class="section fp-auto-height">
-            <h2>footer</h2>
-        </section>
-    </main>
-</body>
-
+    <title>Vite App</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
