feat: 로그인적용 / 메인화면 외부파일 homeview에서만 적용시킴.

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 
 <body>
 
-  <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script src="./src/fullpage/jquery.fullPage.js"></script> -->
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
+
+  <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script> -->
+  <!-- <script src="./src/fullpage/jquery.fullPage.js" defer></script> -->
   <!-- <script src="./src/fullpage/main.js"></script> -->
 </body>
 
